# CPE400_Group

GroupProject/: CMakeLists.txt  README.md
GroupProject/include/: BaseStation.h  Drone.h  VertexType.h
GroupProject/src/: BaseStation.cpp  Drone.cpp  Main.cpp
